add login and handle jwt
