# src/app/api/models.ts
@@ -7,8 +7,10 @@ export type { CategoryDto } from './models/category-dto';
 export type { CreateOrderDetailDto } from './models/create-order-detail-dto';
 export type { CreateOrderDto } from './models/create-order-dto';
 export type { CreateProductDto } from './models/create-product-dto';
+export type { LoginDto } from './models/login-dto';
 export type { OrderDetailDto } from './models/order-detail-dto';
 export type { OrderDto } from './models/order-dto';
 export type { ProblemDetails } from './models/problem-details';
 export type { ProductDto } from './models/product-dto';
+export type { TokenResponse } from './models/token-response';
 export type { UpdateProductDto } from './models/update-product-dto';
