# src/app/api/models/token-response.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface TokenResponse {
+  token?: string | null;
+}
